--- a/src/pages/got.astro
+++ b/src/pages/got.astro
@@ -1,7 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Comunicaciones from '../components/comunicaciones.astro';
-import Character from '../components/character.astro';
+import Layout from '../layouts/layout2.astro';
+import Comunicaciones from '../components/got/comunicaciones.astro';
+import type { Char } from '../types/types'
+import Character from '../components/got/character.astro';
 import DATA from '../data/data.json';
 
 console.log(DATA);
